--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "react-dom": "^16.4.2"
     },
     "dependencies": {
+        "flux": "^3.1.3",
         "react-bootstrap": "^0.32.3"
     }
 }
